# easyTranslate

./: .gitignore  README.md  pyproject.toml  requirements-dev.text
.github/workflows/: python-package.yml  python-publish.yml  python-pytest.yml
easytranslate/: __init__.py  main.py  manual_mapping.py  settings.py
easytranslator/: __init__.py  main.py
tests/: test_main.py
utils/: manual_map.py
