[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["./easytranslate"]

[project]
name = "easytranslate"
version = "2024.6.12"
authors = [
  { name="Versun", email="easytranslate@versun.me" },
]
description = "A Python package for reliable text translation using multiple free engines with automatic failover."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "translators",
]

[project.urls]
Homepage = "https://github.com/versun/easytranslate"
Repository = "https://github.com/versun/easytranslate.git"
Issues = "https://github.com/versun/easytranslate/issues"