[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["./easytranslator"]

[project]
name = "easytranslator"
version = "2024.6.20"
authors = [
  { name="Versun", email="easytranslator@versun.me" },
]
description = "A Python package for reliable text translation using multiple free engines with automatic failover."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0 license"}
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "translators",
]

[project.urls]
Homepage = "https://github.com/versun/easytranslator"
Repository = "https://github.com/versun/easytranslator.git"
Issues = "https://github.com/versun/easytranslator/issues"
